<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="note"
        android:persistent="false"
        android:title="IMPORTANT!"
        android:summary="Once turned on, you can't turn off the cycled treatment support. This limitation is to be lifted in a future update." />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_treatment_enabled"
        android:summary="@string/pref_summary_treatment_enabled"
        android:title="@string/pref_title_treatment_enabled" />

    <PreferenceCategory
        android:dependency="@string/pref_key_treatment_enabled"
        android:title="@string/prefcat_title_treatment_first_cycle">

        <name.leesah.nirvana.ui.preference.DatePreference
            android:dependency="@string/pref_key_treatment_enabled"
            android:key="@string/pref_key_treatment_first_day"
            android:title="@string/pref_title_treatment_first_day" />

        <name.leesah.nirvana.ui.preference.PeriodPreference
            android:dependency="@string/pref_key_treatment_enabled"
            android:key="@string/pref_key_treatment_cycle_length"
            android:title="@string/pref_title_treatment_cycle_length" />

    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="@string/pref_key_treatment_enabled"
        android:title="@string/prefcat_title_treatment_recurring">

        <name.leesah.nirvana.ui.settings.treatment.RecurringStrategyPreference
            android:dependency="@string/pref_key_treatment_enabled"
            android:key="@string/pref_key_treatment_recurring" />

    </PreferenceCategory>

</PreferenceScreen>